RESOLVED FIXED192042
[Win] listDirectory in FileSystemWin.cpp should not skip all directories
https://bugs.webkit.org/show_bug.cgi?id=192042
Summary [Win] listDirectory in FileSystemWin.cpp should not skip all directories
Christopher Reid
Reported 2018-11-27 15:08:07 PST
ASSERT(diskUsage >= databaseFileSize); is failing in SQLiteIDBBackingStore.cpp with mozilla's indexdb demo https://mdn.mozillademos.org/en-US/docs/Web/API/IndexedDB_API/Using_IndexedDB$samples/Full_IndexedDB_example?revision=1436833 SQLiteIDBBackingStore.cpp: > uint64_t diskUsage = 0; > for (auto& directory : FileSystem::listDirectory(m_absoluteDatabaseDirectory, "*")) { > for (auto& file : FileSystem::listDirectory(directory, "*.sqlite3"_s)) > diskUsage += SQLiteFileSystem::getDatabaseFileSize(file); > } > ASSERT(diskUsage >= databaseFileSize); FileSystem::listDirectory(m_absoluteDatabaseDirectory, "*") doesn't return anything because windows' listDirectory implementation never returns any child directories. So diskUsage is always 0 for this case.
Attachments
Patch (1.71 KB, patch)
2018-11-27 16:06 PST, Christopher Reid
fujii: review-
patch (6.19 KB, patch)
2018-11-29 10:33 PST, Christopher Reid
no flags
Christopher Reid
Comment 1 2018-11-27 16:06:22 PST
Don Olmstead
Comment 2 2018-11-27 17:05:46 PST
Comment on attachment 355804 [details] Patch LGTM
Brent Fulgham
Comment 3 2018-11-27 18:17:41 PST
Comment on attachment 355804 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=355804&action=review > Source/WebCore/ChangeLog:8 > + Covered by existing tests. Does this allow us to unskip a test on Windows?
Fujii Hironori
Comment 4 2018-11-28 00:01:59 PST
Comment on attachment 355804 [details] Patch good catch.
Christopher Reid
Comment 5 2018-11-28 11:17:40 PST
(In reply to Brent Fulgham from comment #3) > Comment on attachment 355804 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=355804&action=review > > > Source/WebCore/ChangeLog:8 > > + Covered by existing tests. > > Does this allow us to unskip a test on Windows? It appears so, all storage tests are currently skipped on wincairo and all indexeddb tests seem to fail that assert. I believe most indexeddb tests should be passing now, I'll run through storage tests and update the expectations.
Christopher Reid
Comment 6 2018-11-29 10:33:53 PST
Don Olmstead
Comment 7 2018-11-29 11:40:18 PST
The WinCairo bot seems to just be in bad shape. Guessing you compiled on wincairo so we can assume all is well.
Christopher Reid
Comment 8 2018-11-29 12:43:25 PST
(In reply to Don Olmstead from comment #7) > The WinCairo bot seems to just be in bad shape. Guessing you compiled on > wincairo so we can assume all is well. > "bin64\WebKitTestRunner.exe". The process cannot access the file because it is being used by another process Yeah, I'm not sure why WebKitTestRunner.exe would be in use on wincairo EWS
WebKit Commit Bot
Comment 9 2018-11-29 18:16:26 PST
Comment on attachment 356021 [details] patch Clearing flags on attachment: 356021 Committed r238723: <https://trac.webkit.org/changeset/238723>
WebKit Commit Bot
Comment 10 2018-11-29 18:16:28 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 11 2018-11-29 18:17:34 PST
Note You need to log in before you can comment on or make changes to this bug.