[Win] listDirectory in FileSystemWin.cpp should not skip all directories https://bugs.webkit.org/show_bug.cgi?id=192042

Reviewed by Fujii Hironori.

Source/WebCore:

Covered by existing tests.

listDirectory is not returning any child directories which is causing
ASSERT(diskUsage >= databaseFileSize) in SQLiteIDBBackingStore.cpp to fail.

Change listDirectory in FileSystemWin to match FileSystemPOSIX's behavior.
listDirectory should only skip the current and previous directories.

* platform/win/FileSystemWin.cpp:

LayoutTests:

Enable storage tests on WinCairo and adding initial test expectations.

* platform/wincairo/TestExpectations:


Canonical link: https://commits.webkit.org/206867@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@238723 268f45cc-cd09-0410-ab3c-d52691b4dbfc